Updated all files for the landing page - first commit

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,8 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&family=Rubik+Moonrocks&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+		<link rel="icon" type="image/x-icon" href="/src/assets/favicon.svg">
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<meta name="description" content="Jardín Infantil Magic World Explorers - Bogotá, D.C.">
+		<meta name="keywords" content="Educación, preescolar, Jardín Infantil, Desarrollo Infantil">
+		<title>Magic world Explorers</title>
 	</head>
 	<body>
 		<slot />
