--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,22 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import Header from '../components/Header.astro';
+import Hero from '../components/Hero.astro';
+import Section from '../components/Section.astro';
+import Services from '../components/Services.astro';
+import Team from '../components/Team.astro';
+import Testimonies from '../components/Testimonies.astro';
+import Footer from '../components/Footer.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Activities from '../components/Activities.astro';
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="index page">
+	<Header/>
+	<Hero />
+	<Section />
+	<Activities />
+	<Services />
+	<Testimonies />
+	<Team />
+	<Footer />
 </Layout>
