--- a/src/components/Activities_card.astro
+++ b/src/components/Activities_card.astro
@@ -25,7 +25,7 @@ const {activity_name, description, thumb, excerpt, hour, place, date} = Astro.pr
     </div>
     <div class="activities-card-content">
         <div class="activities-card--image">
-            <Image src={thumb} alt="Kids playing" width={100} height={100}/>
+            <Image src={`${import.meta.env.BASE_URL}${thumb}`} alt="Kids playing" width={100} height={100}/>
         </div>
         <div class="activities-card--tittle">
             <h3 set:html={activity_name}></h3>
