--- a/src/components/Services_card.astro
+++ b/src/components/Services_card.astro
@@ -14,7 +14,7 @@ const {excerpt, service_name, thumb} = Astro.props
 
 <div class="service_card" id={excerpt}>
     <span>
-        <Image src={thumb} alt={excerpt} width={100} height={100}/>
+        <Image src={`${import.meta.env.BASE_URL}${thumb}`} alt={excerpt} width={100} height={100}/>
     </span>
     <h4 set:html={service_name}></h4>
 </div>
