added styles for section, activities and testimonies components for responsive

--- a/src/components/Activities_card.astro
+++ b/src/components/Activities_card.astro
@@ -19,9 +19,9 @@ const {activity_name, description, thumb, excerpt, hour, place, date} = Astro.pr
 <div class="activities-card">
     <div class="activities-card-info">
         <p>{description}</p>
-        <p>{date}</p>
-        <p>{place}</p>
-        <p>{hour}</p>
+        <p><strong>Fecha:</strong> {date}</p>
+        <p><strong>Lugar:</strong> {place}</p>
+        <p><strong>Hora:</strong> {hour}</p>
     </div>
     <div class="activities-card-content">
         <div class="activities-card--image">
