--- a/src/styles/section.sass
+++ b/src/styles/section.sass
@@ -13,7 +13,7 @@
 
     .section_clouds
         position: absolute
-        top: -4%
+        top: -12%
         width: 100%
         height: 300px
 
@@ -90,6 +90,7 @@
 
     .section_content_text
         p
+            font-family: $main_font
             width: 90%
             height: 70%
             text-align: center
@@ -112,10 +113,12 @@
         position: absolute
         top: -15%
         width: 100%
+        height: 18%
 
     .section_clouds
         img
             width: 100%
+            height: 100%
 
     .section_content
         position: relative
@@ -176,6 +179,7 @@
 
     .section_content_text
         h2
+            font-display: $main_font
             color: $main_pink
             font-size: 3vw
             margin-top: 5%
@@ -186,5 +190,6 @@
             height: 70%
             text-align: center
             font-size: 1.5vw
+            font-display: $main_font
 
 
