--- a/src/styles/activities.sass
+++ b/src/styles/activities.sass
@@ -11,6 +11,7 @@
         width: 100%
         height: auto
         background: $main_blue
+        padding: 20px 0
 
     .activities
         h1
@@ -19,7 +20,7 @@
             width: 60%
             height: auto
             color: $dark_blue
-            font-size: clamp(1.5rem, 1rem + 0.8vw, 3rem)
+            font-size: clamp(2rem, 1rem + 0.8vw, 3rem)
             text-align: center
 
     .activities_content
@@ -41,7 +42,7 @@
         justify-content: flex-start
         align-items: center
         width: 95%
-        height: 75vh
+        height: 55vh
         margin-top: 10%
         background: $white
         border: 0
@@ -66,14 +67,11 @@
         
     .activities-card-info
         position: absolute
-        top: 0
-        left: 0px
         display: flex
         flex-flow: column nowrap
-        justify-content: space-evenly
         align-items: center
         width: 100%
-        height: 85%
+        height: 80%
         background: $white
         border: 0
         border-radius: 20px
@@ -85,9 +83,8 @@
     .activities-card-info
         p:nth-child(1)
             width: 85%
-            height: 10%
-            margin-top: 20%
-            margin-bottom: 40%
+            height: 50%
+            margin-top: 5%
             color: $main_black
             text-align: center
             font-size: clamp(1.5rem, 1rem + 0.8vw, 2rem)
@@ -95,14 +92,23 @@
     .activities-card-info
         p:nth-child(2)
             font-size: clamp(1.5rem, 1rem + 0.8vw, 2rem)
+            width: 85%
+            height: 10%
+            text-align: center
 
     .activities-card-info
         p:nth-child(3)
             font-size: clamp(1.5rem, 1rem + 0.8vw, 2rem)
+            width: 85%
+            height: 10%
+            text-align: center
 
     .activities-card-info
         p:nth-child(4)
             font-size: clamp(1.5rem, 1rem + 0.8vw, 2rem)
+            width: 85%
+            height: 10%
+            text-align: center
 
     .activities-card-info
         strong
@@ -110,7 +116,7 @@
 
     .activities-card--image
         width: 90%
-        height: 40%
+        height: 38%
         border-radius: 15px 15px 0 0
         margin-bottom: 5%
 
@@ -127,7 +133,7 @@
         align-items: center
         width: 90%
         height: 10%
-        font-size: clamp(2rem, 1rem + 0.5vw, 3rem)
+        font-size: clamp(1.5rem, 1rem + 0.5vw, 2rem)
         color: $dark_blue
         margin-left: 0%
 
@@ -138,14 +144,14 @@
         margin-left: 0%
         margin-bottom: 30%
         width: 80%
-        font-size: clamp(1.5rem, 1rem + 0.5vw, 2rem)
+        font-size: clamp(1rem, 1rem + 0.5vw, 2rem)
 
     .activities-more
         position: absolute
         display: flex
         justify-content: space-between
         align-items: center
-        bottom: 0%
+        bottom: 2%
         right: 5%
         width: 90%
         height: 12%
@@ -210,7 +216,7 @@
             width: 30%
             height: auto
             color: $dark_blue
-            font-size: 1.8vw
+            font-size: clamp(2rem, 1rem + 0.8vw, 3rem)
             text-align: center
 
     .activities_content
