--- a/src/styles/testimonies.sass
+++ b/src/styles/testimonies.sass
@@ -1,102 +1,248 @@
 @import '_variables.sass'
 
-@media (min-width: 1512px) and (max-width: 1728px)
-        
-.testimonies_section
-    position: relative
-    display: flex
-    flex-flow: column nowrap
-    justify-content: flex-start
-    align-items: center
-    width: 100%
-    height: 100vh
-    background: $main_blue
+@media (min-width: 350px) and (max-width: 1024px )
 
-.testimonies_container
-    position: relative
-    display: flex
-    flex-flow: row nowrap
-    justify-content: space-evenly
-    align-items: center
-    width: 95%
-    height: 95%
+    .testimonies_section
+        position: relative
+        display: flex
+        flex-flow: column nowrap
+        justify-content: center
+        align-items: center
+        width: 100%
+        height: 100vh
+        background: $main_blue
+        overflow: hidden
 
-.testimonies
-    position: relative
-    top: 5%
-    display: flex
-    flex-flow: column nowrap
-    align-items: center
-    width: 30%
-    height: 65%
-    max-height: 900px
-    background: $dark_blue
-    border: 0
+    .testimonies_container
+        position: relative
+        display: flex
+        flex-flow: row nowrap
+        justify-content: space-evenly
+        align-items: center
+        gap: 15px
+        width: 95%
+        height: 70%
+        overflow-x: auto
+        scroll-snap-type: x mandatory
+        scroll-behavior: smooth
+        -webkit-overflow-scrolling: touch
 
-.thumb
-    position: absolute
-    top: -20%
-    width: 60%
-    min-width: 220px
-    height: 55%
-    min-height: 220px
-    border-radius: 50%
-    overflow: hidden
+    .testimonies_container::-webkit-scrollbar
+        width: 10px
+        height: 10px
 
-.thumb
-    img
+    .testimonies_container::-webkit-scrollbar-thumb
+        background: $main_pink
+        border-radius: 10px
+
+    .testimonies_container::-webkit-scrollbar-track
+        background: transparent
+
+    .testimonies_container > .testimonies
+        scroll-snap-align: start
+        flex-shrink: 0
+        position: relative
+        top: 0%
+        display: flex
+        flex-flow: column nowrap
+        align-items: center
         width: 100%
         height: 100%
-        object-fit: cover
+        border-radius: 10px
+        background: $dark_blue
+        border: 0
 
-.testimonies
-    h3
+    .thumb
         position: absolute
-        top: 40% 
-        width: 35%
-        height: auto
-        color: $white
-        font-size: 1.5vw
-        text-align: center
+        top: 5%
+        width: 50%
+        height: 38%
+        border-radius: 50%
+        overflow: hidden
 
-.testimonies
-    .subtitle
-        position: absolute
-        top: 48%
-        width: 35%
-        height: auto
-        text-align: center
-        color: $white
-        font-size: 1vw
-
-.testimonies
-    .pharagraph
-        position: absolute
-        top: 60%
-        width: 70%
-        height: auto
-        text-align: center
-        color: $white
-        font-size: 1vw
-
-.stars_container
-    position: absolute
-    bottom: 30px
-    display: flex
-    flex-flow: row nowrap
-    justify-content: space-evenly
-    align-items: center
-    width: 70%
-    height: 10%
-
-.stars_container
-    span
-        width: 30%
-        height: 80%
-
-.stars_container
-    span
-        svg
+    .thumb
+        img
             width: 100%
             height: 100%
+            object-fit: cover
+
+    .testimonies
+        h3
+            position: absolute
+            top: 40% 
+            width: 60%
+            height: auto
+            color: $white
+            font-size: clamp(2rem, 1rem + 0.5vw, 3rem)
+            text-align: center
+
+    .testimonies
+        .subtitle
+            position: absolute
+            top: 50%
+            width: 60%
+            height: auto
+            text-align: center
+            color: $white
+            font-size: clamp(1rem, 1rem + 0.5vw, 2rem)
+
+    .testimonies
+        .pharagraph
+            position: absolute
+            top: 65%
+            width: 90%
+            height: auto
+            text-align: center
+            color: $white
+            font-size: clamp(1rem, 1rem + 0.5vw, 2rem)
+
+    .stars_container
+        position: absolute
+        bottom: 5%
+        display: flex
+        flex-flow: row nowrap
+        justify-content: space-evenly
+        align-items: center
+        width: 70%
+        height: 10%
+
+    .stars_container
+        span
+            width: 30%
+            height: 80%
+
+    .stars_container
+        span
+            svg
+                width: 100%
+                height: 100%
+
+    .slider_btns.active
+        display: flex
+        flex-flow: row nowrap
+        justify-content: space-evenly
+        align-items: center
+        width: 50%
+        height: 40px
+        margin-top: 15%
+
+    .slider_btns.active > a
+            display: flex
+            align-items: center
+            justify-content: center
+            width: 50px
+            height: 50px
+            border-radius: 50%
+            text-decoration: none
+            background: $white
+
+
+@media (min-width: 1023px)
+        
+    .testimonies_section
+        position: relative
+        display: flex
+        flex-flow: column nowrap
+        justify-content: flex-start
+        align-items: center
+        width: 100%
+        height: 100vh
+        background: $main_blue
+
+    .testimonies_container
+        position: relative
+        display: flex
+        flex-flow: row nowrap
+        justify-content: space-evenly
+        align-items: center
+        width: 95%
+        height: 95%
+
+    .testimonies
+        position: relative
+        top: 5%
+        display: flex
+        flex-flow: column nowrap
+        align-items: center
+        width: 30%
+        height: 65%
+        max-height: 900px
+        background: $dark_blue
+        border: 0
+
+    .thumb
+        position: absolute
+        top: -20%
+        width: 60%
+        min-width: 220px
+        height: 55%
+        min-height: 220px
+        border-radius: 50%
+        overflow: hidden
+
+    .thumb
+        img
+            width: 100%
+            height: 100%
+            object-fit: cover
+
+    .testimonies
+        h3
+            position: absolute
+            top: 40% 
+            width: 35%
+            height: auto
+            color: $white
+            font-size: 1.5vw
+            text-align: center
+
+    .testimonies
+        .subtitle
+            position: absolute
+            top: 48%
+            width: 35%
+            height: auto
+            text-align: center
+            color: $white
+            font-size: 1vw
+
+    .testimonies
+        .pharagraph
+            position: absolute
+            top: 60%
+            width: 70%
+            height: auto
+            text-align: center
+            color: $white
+            font-size: 1vw
+
+    .stars_container
+        position: absolute
+        bottom: 30px
+        display: flex
+        flex-flow: row nowrap
+        justify-content: space-evenly
+        align-items: center
+        width: 70%
+        height: 10%
+
+    .stars_container
+        span
+            width: 30%
+            height: 80%
+
+    .stars_container
+        span
+            svg
+                width: 100%
+                height: 100%
+
+    .slider_btns
+        display: none
+        flex-flow: row nowrap
+        justify-content: space-evenly
+        align-items: center
+        width: 50%
+        height: 40px
+        margin-top: 15%
 
