added styles for responsive header, team and footer sections

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,17 +11,19 @@ import Instagram from '../assets/instagram.svg'
     <div class="footer-content">
         <div class="footer-contact">
             <h2>Ponte en contacto</h2>
-            <div class="contact-phone">
-                <span><Phone width={'25px'} height={'25px'}/></span>
-                <p>310-3468979</p>
-            </div>
-            <div class="contact-email">
-                <span><Email width={'25px'} height={'25px'}/></span>
-                <p>magicworldexplorers@gmail.com</p>
-            </div>
-            <div class="contact-address">
-                <span><Location width={'25px'} height={'25px'}/></span>
-                <p>Calle 174 # 55 C - 28 (Bogotá)</p>
+            <div class="contact-container">
+                <div class="contact-phone">
+                    <span><Phone width={'25px'} height={'25px'}/></span>
+                    <p>310-3468979</p>
+                </div>
+                <div class="contact-email">
+                    <span><Email width={'25px'} height={'25px'}/></span>
+                    <p>magicworldexplorers@gmail.com</p>
+                </div>
+                <div class="contact-address">
+                    <span><Location width={'25px'} height={'25px'}/></span>
+                    <p>Calle 174 # 55 C - 28 (Bogotá)</p>
+                </div>
             </div>
         </div>
         <div class="footer-social">
