--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -6,6 +6,7 @@
         position: relative
         display: flex
         flex-direction: row
+        justify-content: space-evenly
         align-items: center
         padding: 0
         width: 100%
@@ -15,7 +16,7 @@
 
     .header_logo
         position: absolute
-        left: 40%
+        left: 2%
         display: flex
         flex-direction: row
         align-items: center
@@ -40,8 +41,7 @@
         justify-content: space-evenly
         align-items: center
         width: 100%
-        height: 0%
-        
+        height: 0%        
 
     .header_nav.open
         display: flex
@@ -57,10 +57,9 @@
         flex-direction: column
         align-items: center
         justify-content: center
-        left: 2%
-        width: 18%
+        width: 15%
         max-width: 90px
-        height: 40%
+        height: 35%
         border-radius: 10px
         padding: 20px 5px
         cursor: pointer
@@ -84,15 +83,15 @@
     .header_menu_mobile
         span:nth-child(2)
             position: absolute
-            width: 63%
-            height: 8px
+            width: 62%
+            height: 7px
             transform: rotate(0)
             transition: transform 0.2s ease-in-out
 
     .header_menu_mobile
         span:nth-child(3)
             width: 70%
-            height: 8px
+            height: 7px
             transform: rotate(0)
             transition: transform 0.2s ease-in-out
         
