--- a/src/css/index.css
+++ b/src/css/index.css
@@ -43,6 +43,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    width: 90%;
     height: 100%;
     min-height: 350px;
   }
@@ -52,9 +53,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 15%;
-    max-width: 90px;
+    width: 20%;
+    max-width: 80px;
     height: 35%;
+    max-height: 80px;
     border-radius: 10px;
     padding: 20px 5px;
     cursor: pointer;
