--- a/src/styles/footer.sass
+++ b/src/styles/footer.sass
@@ -8,6 +8,7 @@
         flex-direction: column
         width: 100%
         height: 50vh
+        padding: 0
 
     .footer-content
         display: flex
@@ -157,6 +158,7 @@
         flex-flow: colum nowrap
         width: 100%
         height: 40vh
+        padding: 0
 
     .footer-content
         display: flex
