--- a/src/components/Activities_card.astro
+++ b/src/components/Activities_card.astro
@@ -3,6 +3,7 @@ import '../css/activities.css'
 import register from '../assets/Register.gif'
 import { Image } from 'astro:assets'
 
+const base = import.meta.env.BASE_URL;
 interface Props {
     activity_name: string,
     date: string,
@@ -25,7 +26,7 @@ const {activity_name, description, thumb, excerpt, hour, place, date} = Astro.pr
     </div>
     <div class="activities-card-content">
         <div class="activities-card--image">
-            <Image src={`${import.meta.env.BASE_URL}${thumb}`} alt="Kids playing" width={100} height={100}/>
+            <Image src={`${base}${thumb}`} alt="Kids playing" width={100} height={100}/>
         </div>
         <div class="activities-card--tittle">
             <h3 set:html={activity_name}></h3>
