--- a/src/components/Services_card.astro
+++ b/src/components/Services_card.astro
@@ -2,6 +2,7 @@
 import '/src/css/services.css'
 import { Image } from 'astro:assets'
 
+const base = import.meta.env.BASE_URL;
 interface Props {
     service_name: string,
     excerpt: string,
@@ -14,7 +15,7 @@ const {excerpt, service_name, thumb} = Astro.props
 
 <div class="service_card" id={excerpt}>
     <span>
-        <Image src={`${import.meta.env.BASE_URL}${thumb}`} alt={excerpt} width={100} height={100}/>
+        <Image src={`${base}${thumb}`} alt={excerpt} width={100} height={100}/>
     </span>
     <h4 set:html={service_name}></h4>
 </div>
