--- a/src/styles/footer.sass
+++ b/src/styles/footer.sass
@@ -69,8 +69,9 @@
         justify-content: flex-start
         align-items: center
         width: 90%
-        height: 45%
+        height: 40%
         color: $white
+        margin-top: 5%
 
     .footer-social
         h2
@@ -155,9 +156,9 @@
     .main-footer
         position: relative
         display: flex
-        flex-flow: colum nowrap
+        flex-direction: column
         width: 100%
-        height: 40vh
+        height: 50vh
         padding: 0
 
     .footer-content
@@ -165,7 +166,7 @@
         flex-flow: row nowrap
         align-items: flex-start
         width: 100%
-        height: 90%
+        height: 100%
         background: $dark_blue
 
     .footer-contact
@@ -193,9 +194,9 @@
         flex-flow: row
         justify-content: space-around
         align-items: center
-        width: 70%
+        width: 100%
         height: 10%
-        margin-bottom: 10px
+        margin-bottom: 20px
 
     .footer-contact
         p
@@ -278,14 +279,12 @@
             transition: transform .5s
 
     .copy-section
-        position: absolute
-        bottom: 0
+        position: relative
         display: flex
         justify-content: center
         align-items: center
         width: 100%
-        height: 10%
-        min-height: 50px
+        height: 20%
         color: $second_black
         background: $main_black
 
