--- a/src/components/Activities_card.astro
+++ b/src/components/Activities_card.astro
@@ -2,8 +2,6 @@
 import '../css/activities.css'
 import register from '../assets/Register.gif'
 import { Image } from 'astro:assets'
-
-const base = import.meta.env.BASE_URL;
 interface Props {
     activity_name: string,
     date: string,
@@ -14,7 +12,9 @@ interface Props {
     thumb: string,
 }
 
-const {activity_name, description, thumb, excerpt, hour, place, date} = Astro.props
+const thumbImage = new URL(`../assets/${Astro.props.thumb}`, import.meta.url).href;
+
+const {activity_name, description, excerpt, thumb, hour, place, date} = Astro.props
 
 ---
 <div class="activities-card">
@@ -26,7 +26,7 @@ const {activity_name, description, thumb, excerpt, hour, place, date} = Astro.pr
     </div>
     <div class="activities-card-content">
         <div class="activities-card--image">
-            <Image src={`${base}${thumb}`} alt="Kids playing" width={100} height={100}/>
+            <img src={thumbImage} alt="Kids playing" width={100} height={100}/>
         </div>
         <div class="activities-card--tittle">
             <h3 set:html={activity_name}></h3>
