created activities md files, content.config.ts; created a Subscribe page draft and moved the Header and Footer commponents to the main Layout

--- a/src/components/Activities.astro
+++ b/src/components/Activities.astro
@@ -3,6 +3,9 @@ import '../css/activities.css'
 import ActivitiesCard from '../components/Activities_card.astro'
 import activitiesData from '../content/activities.json'
 
+//import { getCollection } from 'astro:content'
+//const allActivities = await getCollection('activities')
+
 const {result} = activitiesData;
 const {activities} = result;
 const maxActivities = 3;
