--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,18 @@
 ---
-import Header from '../components/Header.astro';
 import Hero from '../components/Hero.astro';
 import Section from '../components/Section.astro';
 import Services from '../components/Services.astro';
 import Team from '../components/Team.astro';
 import Testimonies from '../components/Testimonies.astro';
-import Footer from '../components/Footer.astro';
 import Layout from '../layouts/Layout.astro';
 import Activities from '../components/Activities.astro';
 ---
 
-<Layout title="index page">
-	<Header/>
+<Layout title="Inicio">
 	<Hero />
 	<Section />
 	<Activities />
 	<Services />
 	<Testimonies />
 	<Team />
-	<Footer />
 </Layout>
