modified paths of the images for the services, activities and reviews sections

--- a/src/components/Testimonies.astro
+++ b/src/components/Testimonies.astro
@@ -18,7 +18,7 @@ const limitedReviews = reviews.slice(0, maxReviews)
             <>
             {limitedReviews.map(review => (
             <div class="testimonies" id={`slide_${review.id}`}>
-                <span class="thumb"><Image src={`${base}${review.thumb}`} width= {150} height= {150} alt={review.author_name}/></span>
+                <span class="thumb"><img src={`src/assets/${review.thumb}`} width= {150} height= {150} alt={review.author_name}/></span>
                 <h3>{review.author_name}</h3>
                 <p class="subtitle">Madre de Familia</p>
                 <p class="pharagraph">{review.text}</p>
