--- a/src/components/Services_card.astro
+++ b/src/components/Services_card.astro
@@ -15,7 +15,7 @@ const {excerpt, service_name, thumb} = Astro.props
 
 <div class="service_card" id={excerpt}>
     <span>
-        <Image src={`${base}${thumb}`} alt={excerpt} width={100} height={100}/>
+        <img src={`src/assets/${thumb}`} alt={excerpt} width={100} height={100}/>
     </span>
     <h4 set:html={service_name}></h4>
 </div>
