--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -3,7 +3,7 @@ import '../css/section.css'
 import Star from '../components/Star.astro'
 import StarTwo from './StarTwo.astro'
 import { Image } from 'astro:assets';
-import HeroImage from '/src/assets/kids-playing.webp'
+import HeroImage from '/public/kids-playing.webp'
 import cloudsImage from '../assets/clouds.svg'
 
 ---
