updated files path alias for using @. Updated styles for header logo, activities card size, and testimonies card size

--- a/src/components/Activities.astro
+++ b/src/components/Activities.astro
@@ -1,7 +1,7 @@
 ---
-import '../css/activities.css'
-import ActivitiesCard from '../components/Activities_card.astro'
-import activitiesData from '../content/activities.json'
+import '@/css/activities.css'
+import ActivitiesCard from '@/components/Activities_card.astro'
+import activitiesData from '@/content/activities.json'
 
 //import { getCollection } from 'astro:content'
 //const allActivities = await getCollection('activities')
