--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,10 @@
 ---
-import '../css/footer.css'
-import Phone from '../assets/phone.svg'
-import Email from '../assets/email.svg'
-import Location from '../assets/location.svg'
-import Facebook from '../assets/facebook.svg'
-import Instagram from '../assets/instagram.svg'
+import '@/css/footer.css'
+import Phone from '@/assets/phone.svg'
+import Email from '@/assets/email.svg'
+import Location from '@/assets/location.svg'
+import Facebook from '@/assets/facebook.svg'
+import Instagram from '@/assets/instagram.svg'
 ---
 
 <footer class="main-footer">
