--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,8 +1,8 @@
 ---
-import '../css/hero.css'
-import Rocket from '../assets/rocket.svg'
+import '@/css/hero.css'
+import Rocket from '@/assets/rocket.svg'
 import { Image } from 'astro:assets';
-import HeroImage from '../assets/happy-family.webp'
+import HeroImage from '@/assets/happy-family.webp'
 ---
 
 <section  id= "hero" class="hero_section">
