--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,11 +1,10 @@
 ---
-import '../css/section.css'
-import Star from '../components/Star.astro'
-import StarTwo from './StarTwo.astro'
+import '@/css/section.css'
+import Star from '@/components/Star.astro'
+import StarTwo from '@/components/StarTwo.astro'
 import { Image } from 'astro:assets';
-import HeroImage from '/public/kids-playing.webp'
-import cloudsImage from '../assets/clouds.svg'
-
+import HeroImage from '@/assets/kids-playing.webp'
+import cloudsImage from '@/assets/clouds.svg'
 ---
 
 <section class="main_section" id="main_section">
