--- a/src/components/StarTwo.astro
+++ b/src/components/StarTwo.astro
@@ -1,6 +1,6 @@
 ---
-import '/src/css/section.css'
-import Icon from '../assets/stars.svg'
+import '@/css/section.css'
+import Icon from '@/assets/stars.svg'
 ---
 
 <Icon class="star-down" id='starTwo'/>
