--- a/src/components/Subscribe_form.astro
+++ b/src/components/Subscribe_form.astro
@@ -1,5 +1,5 @@
 ---
-import '../css/subscribe.css'
+import '@/css/subscribe.css'
 ---
 <div class="subscribe_container">
     <h1>Formulario de pre-inscripción</h1>
