--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -1,10 +1,10 @@
 ---
-import '../css/team.css'
+import '@/css/team.css'
 import { Image } from 'astro:assets';
-import Teacher1 from '../assets/teacher1.webp'
-import Teacher2 from '../assets/teacher2.webp'
-import Teacher3 from '../assets/teacher3.webp'
-import Teacher4 from '../assets/teacher4.webp'
+import Teacher1 from '@/assets/teacher1.webp'
+import Teacher2 from '@/assets/teacher2.webp'
+import Teacher3 from '@/assets/teacher3.webp'
+import Teacher4 from '@/assets/teacher4.webp'
 ---
 
 <section class="team-section" id="team">
