--- a/src/components/Testimonies.astro
+++ b/src/components/Testimonies.astro
@@ -1,10 +1,8 @@
 ---
-import '../css/testimonies.css'
-import Star from '../assets/star.svg'
-import reviewsData from "../content/reviews.json"
+import '@/css/testimonies.css'
+import Star from '@/assets/star.svg'
+import reviewsData from "@/content/reviews.json"
 import {Image} from "astro:assets"
-
-const base = import.meta.env.BASE_URL;
 
 const {result} = reviewsData;
 const {reviews} = result;
@@ -18,7 +16,7 @@ const limitedReviews = reviews.slice(0, maxReviews)
             <>
             {limitedReviews.map(review => (
             <div class="testimonies" id={`slide_${review.id}`}>
-                <span class="thumb"><img src={`/public/${review.thumb}`} width= {150} height= {150} alt={review.author_name}/></span>
+                <span class="thumb"><Image src={`/src/assets/${review.thumb}`} width= {150} height= {150} alt={review.author_name}/></span>
                 <h3>{review.author_name}</h3>
                 <p class="subtitle">Madre de Familia</p>
                 <p class="pharagraph">{review.text}</p>
