--- a/src/pages/subscribe.astro
+++ b/src/pages/subscribe.astro
@@ -1,8 +1,8 @@
 ---
-import SubscribeForm from "../components/Subscribe_form.astro"
-import Layout from "../layouts/Layout.astro"
+import SubscribeForm from '@/components/Subscribe_form.astro'
+import Layout from "@/layouts/Layout.astro"
 import { Image } from "astro:assets";
-import Family from '../assets/happy-family.webp'
+import Family from '@/assets/happy-family.webp'
 ---
 <Layout title="Subscripcion">
     <section class="subscribe_section">
