--- a/src/styles/testimonies.sass
+++ b/src/styles/testimonies.sass
@@ -21,6 +21,7 @@
         align-items: center
         gap: 15px
         width: 95%
+        max-width: 450px
         height: 70%
         overflow-x: auto
         scroll-snap-type: x mandatory
