--- a/src/components/Activities_card.astro
+++ b/src/components/Activities_card.astro
@@ -1,6 +1,5 @@
 ---
-import '../css/activities.css'
-import register from '../assets/Register.gif'
+import '@/css/activities.css'
 import { Image } from 'astro:assets'
 interface Props {
     activity_name: string,
@@ -12,7 +11,6 @@ interface Props {
     thumb: string,
 }
 
-const base = import.meta.env.BASE_URL;
 
 const {activity_name, description, excerpt, thumb, hour, place, date} = Astro.props
 
@@ -26,7 +24,7 @@ const {activity_name, description, excerpt, thumb, hour, place, date} = Astro.pr
     </div>
     <div class="activities-card-content">
         <div class="activities-card--image">
-            <img src={`/public/${thumb}`} alt="Kids playing" width={100} height={100}/>
+            <Image src={`/src/assets/${thumb}`} alt="Kids playing" width={100} height={100}/>
         </div>
         <div class="activities-card--tittle">
             <h3 set:html={activity_name}></h3>
@@ -35,7 +33,6 @@ const {activity_name, description, excerpt, thumb, hour, place, date} = Astro.pr
             <p>{excerpt}</p>
         </div>
         <div class="activities-more">
-            <a href="/" target="_blank"><Image src={register} alt="registro" class="card-register" />Registrate</a>
             <button class="card-btn">Ver más</button>
         </div>
     </div>
