--- a/src/components/Services_card.astro
+++ b/src/components/Services_card.astro
@@ -1,8 +1,6 @@
 ---
-import '/src/css/services.css'
+import '@/css/services.css'
 import { Image } from 'astro:assets'
-
-const base = import.meta.env.BASE_URL;
 interface Props {
     service_name: string,
     excerpt: string,
@@ -15,7 +13,7 @@ const {excerpt, service_name, thumb} = Astro.props
 
 <div class="service_card" id={excerpt}>
     <span>
-        <img src={`/public/${thumb}`} alt={excerpt} width={100} height={100}/>
+        <Image src={`/src/assets/${thumb}`} alt={excerpt} width={100} height={100}/>
     </span>
     <h4 set:html={service_name}></h4>
 </div>
