--- a/src/styles/activities.sass
+++ b/src/styles/activities.sass
@@ -41,7 +41,8 @@
         flex-flow: column nowrap
         justify-content: flex-start
         align-items: center
-        width: 95%
+        width: 90%
+        max-width: 400px
         height: 55vh
         margin-top: 10%
         background: $white
