--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -21,17 +21,30 @@
         flex-direction: row
         align-items: center
         justify-content: center
-        width: 10%
-        min-width: 90px
+        width: 20%
+        min-width: 100px
         height: 100%
         min-height: 120px
-        cursor: pointer
+
+    .header_logo
+        a
+            display: flex
+            justify-content: center
+            align-items: center
+            width: 100%
+            height: 80%
+            cursor: pointer
 
     .header_logo
         a
             img
                 width: 100%
                 height: 100%
+
+    .header_logo
+        h2
+            display: none
+
     
     .header_nav
         position: absolute
@@ -201,21 +214,37 @@
             display: flex
             flex-direction: row
             align-items: center
-            justify-content: center
-            margin-left: 5%
-            width: 5%
+            justify-content: space-evenly
+            width: 30%
             min-width: 70px
             height: 100%
             min-height: 70px
+            padding-left: 2%
+            
+    .header_logo
+        a
+            display: flex
+            justify-content: center
+            align-items: center
+            width: 35%
+            height: 100%
             cursor: pointer
-            transform: rotate(0)
-            transition: transform 1s
-
+            
     .header_logo
         a
             img
-                width: 100%
-                height: 100%
+                width: 90%
+                height: 80%
+
+    .header_logo
+        h2
+            display: flex
+            justify-content: center
+            align-items: center
+            text-align: center
+            width: 60%
+            height: 100%
+            color: $main_pink
 
     .header_nav
         position: absolute
