--- a/popular-planet/src/css/index.css
+++ b/popular-planet/src/css/index.css
@@ -13,7 +13,7 @@
   }
   .header_logo {
     position: absolute;
-    left: 5%;
+    left: 2%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -38,9 +38,27 @@
   .header_logo h2 {
     display: none;
   }
-  .header_menu_mobile {
+  .header_nav {
     position: absolute;
-    right: 5%;
+    top: 100%;
+    display: none;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 0%;
+  }
+  .header_nav.open {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 90%;
+    height: 100%;
+    min-height: 350px;
+  }
+  .header_menu_mobile {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -99,31 +117,12 @@
   .header_menu_mobile span:nth-child(4).open {
     transform: scale(0);
   }
-  .header_nav {
-    position: absolute;
-    top: 100%;
-    display: none;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
-    height: 0%;
-  }
-  .header_nav.open {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 90%;
-    height: 100%;
-    min-height: 250px;
-  }
   .nav_list {
     position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     width: 100%;
     height: 100%;
     border-radius: 0 0 20px 20px;
@@ -141,7 +140,6 @@
   }
   .nav_list a {
     text-decoration: none;
-    color: #27445D;
   }
   .nav_list li::after {
     display: block;
@@ -156,13 +154,14 @@
   .nav_list li:hover::after {
     transform: scaleX(1);
   }
-  ul .header_btn--contact {
+  .header_btn--contact {
+    position: absolute;
+    right: 2%;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50%;
-    max-width: 200px;
-    height: 20%;
+    width: 25%;
+    height: 40%;
     border: 1px solid #E574BC;
     border-radius: 100px;
     background: transparent;
@@ -171,6 +170,7 @@
     cursor: pointer;
     text-decoration: none;
     transition: background 0.5s ease;
+    z-index: -1;
   }
   .header_btn--contact:hover {
     background: #E574BC;
@@ -194,22 +194,19 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    width: 25%;
-    min-width: 100px;
+    width: 20%;
+    min-width: 70px;
     height: 100%;
     min-height: 70px;
     padding-left: 2%;
+    background: blue;
   }
   .header_logo a {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    min-width: 100px;
-    max-width: 120px;
+    width: 35%;
     height: 100%;
-    min-height: 100px;
-    max-height: 120px;
     cursor: pointer;
   }
   .header_logo a img {
@@ -230,9 +227,9 @@
     right: 5%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
-    width: 30%;
+    width: 70%;
     height: 90%;
   }
   .header_menu_mobile {
@@ -243,25 +240,25 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    gap: 2%;
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    height: 90%;
   }
   .nav_list li {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 30%;
-    height: 50%;
     list-style: none;
+    color: #27445D;
+    font-size: 1.6vw;
+    font-weight: bold;
     cursor: pointer;
+    width: auto;
     font-family: "Sour Gummy", serif;
+  }
+  .nav_list a {
+    text-decoration: none;
   }
   .nav_list li::after {
     display: block;
     content: "";
-    width: 90%;
+    width: 100%;
     height: 2px;
     border-radius: 1px;
     background: #E574BC;
@@ -271,19 +268,15 @@
   .nav_list li:hover::after {
     transform: scaleX(1);
   }
-  .nav_list a {
-    width: 100%;
-    text-decoration: none;
-    font-size: 1.6vw;
-    font-weight: bold;
-    color: #27445D;
-  }
-  ul .header_btn--contact {
+  .header_btn--contact {
+    position: absolute;
+    right: 2%;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40%;
-    height: 40%;
+    width: 9%;
+    height: 30%;
+    margin-right: 2%;
     border: 1px solid #E574BC;
     border-radius: 100px;
     background: transparent;
