--- a/src/components/Activities.astro
+++ b/src/components/Activities.astro
@@ -1,26 +1,76 @@
 ---
 import '@/css/activities.css'
 import ActivitiesCard from '@/components/Activities_card.astro'
-import activitiesData from '@/content/activities.json'
+//import activitiesData from '@/content/activities.json'
+import SwimImage from '@/assets/children-pool.webp'
+import KitchenImage from '@/assets/kids-playing.webp'
+import ArtsImage from '@/assets/arts.webp'
+import MusicImage from '@/assets/kids.png'
 
 //import { getCollection } from 'astro:content'
 //const allActivities = await getCollection('activities')
+const localActivities = [
+    {
+        id: 1,
+        name: "Natación",
+        date: "05/03/2025",
+        hour:"08:00 am – 10:00 am",
+        place: "Instalaciones del Jardín",
+        excerpt: "Diviertete con tus amigos en nuestras actividades acuáticas supervisadas.",
+        description: "Great service!",
+        thumb:SwimImage
+    },
+    {
+        id: 2,
+        name: "Cocineritos",
+        date: "15/02/2025",
+        hour:"2:00 pm – 5:00 pm",
+        place: "Parque Simón Bolivar",
+        excerpt: "Aprende a tocar diferentes instrumentos musicales mientras te diviertes con tus amigos.",
+        description: "Great service!",
+        thumb:KitchenImage
+    },
+    {
+        id: 3,
+        name: "Escuela de arte",
+        date: "20/05/2025",
+        hour: "9:00 am – 12:00 m",
+        place: "Centro Deportivo Compensar",
+        excerpt: "Ya está abierta nuestra escuela de verano 2024. Inscribete ahora y vive una gran experiencia",
+        description: "No hay un mejor servicio!",
+        thumb:ArtsImage
+    },
+    {
+        id: 4,
+        name: "Escuela de música",
+        date: "12/04/2025",
+        hour:"9:00 am – 12:00 m",
+        place: "Parque Simón Bolivar",
+        excerpt: "Diviertete con tus amigos en nuestras actividades acuáticas supervisadas.",
+        description: "No hay un mejor servicio!",
+        thumb: MusicImage
+        }
+]
 
-const {result} = activitiesData;
-const {activities} = result;
+// const {result} = activitiesData;
+// const {activities} = result;
+// const limitedActivities = activities.slice(0, maxActivities)
+
 const maxActivities = 3;
-const limitedActivities = activities.slice(0, maxActivities)
+const localLimitedActivities = localActivities.slice(0, maxActivities)
+
+console.log(MusicImage)
 ---
 
 <section class="activities" id="features">
     <h1>Actividades</h1>
     <div class="activities_content">
         {
-            limitedActivities.length > 0 ? (
+            localActivities.length > 0 ? (
             <>
                 {
-                    limitedActivities.map((activity) => (
-                        <ActivitiesCard {...activity}/>
+                    localLimitedActivities.map((activity) => (
+                        <ActivitiesCard name={activity.name} date = {activity.date} hour={activity.hour} place={activity.place} excerpt={activity.excerpt} description={activity.description} thumb={activity.thumb}  />
                     ))
                 }
             </>
