--- a/src/components/Services_card.astro
+++ b/src/components/Services_card.astro
@@ -1,19 +1,21 @@
 ---
 import '@/css/services.css'
 import { Image } from 'astro:assets'
+import type { ImageMetadata } from 'astro'
 interface Props {
-    service_name: string,
+    id: number
+    name: string,
     excerpt: string,
-    thumb: string,
+    thumb: ImageMetadata,
 }
 
-const {excerpt, service_name, thumb} = Astro.props
+const {id, excerpt, name, thumb} = Astro.props
 
 ---
 
 <div class="service_card" id={excerpt}>
     <span>
-        <Image src={`/src/assets/${thumb}`} alt={excerpt} width={100} height={100}/>
+        <Image src={thumb} alt={excerpt} width={400} height={300} quality={100}/>
     </span>
-    <h4 set:html={service_name}></h4>
+    <h4 set:html={name}></h4>
 </div>
