--- a/src/components/Testimonies.astro
+++ b/src/components/Testimonies.astro
@@ -3,9 +3,54 @@ import '@/css/testimonies.css'
 import Star from '@/assets/star.svg'
 import reviewsData from "@/content/reviews.json"
 import {Image} from "astro:assets"
+import { string } from 'astro:schema';
 
-const {result} = reviewsData;
-const {reviews} = result;
+//const {result} = reviewsData;
+//const {reviews} = result;
+
+const reviews = [
+    {
+        id: 1,
+        author_name: "John Doe",
+        rating: 5,
+        text: "Great service!",
+        time: 1672444800,
+        thumb:"portrait-man.webp"
+    },
+    {
+        id: 2,
+        author_name: "Mary Jane",
+        rating: 4,
+        text: "Great service!",
+        time: 1672444801,
+        thumb:"portrait-woman.webp"
+    },
+    {
+        id: 3,
+        author_name: "Peter Parker",
+        rating: 3,
+        text: "No hay un mejor servicio!",
+        time: 1672444801,
+        thumb:"oldwoman-portrait.webp"
+    },
+    {
+        id: 4,
+        author_name: "Peter Parker",
+        rating: 3,
+        text: "No hay un mejor servicio!",
+        time: 1672444801,
+        thumb:"oldwoman-portrait.webp"
+    },
+    {
+        id: 5,
+        author_name: "Peter Parker",
+        rating: 3,
+        text: "No hay un mejor servicio!",
+        time: 1672444801,
+        thumb:"oldwoman-portrait.webp"
+    }
+];
+
 const maxReviews = 3;
 const limitedReviews = reviews.slice(0, maxReviews)
 ---
@@ -69,7 +114,7 @@ const limitedReviews = reviews.slice(0, maxReviews)
     </div>
 </section>
 <script>
-    function toggleClassInViewportRange(elementSelector, className, minWidth, maxWidth) {
+    function toggleClassInViewportRange(elementSelector:string, className: string, minWidth: number, maxWidth: number)  {
     function updateClass() {
         const element = document.querySelector(elementSelector);
         if (!element) return;
