--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -16,7 +16,7 @@
 
     .header_logo
         position: absolute
-        left: 2%
+        left: 5%
         display: flex
         flex-direction: row
         align-items: center
@@ -45,28 +45,9 @@
         h2
             display: none
 
-    
-    .header_nav
-        position: absolute
-        top: 100%
-        display: none
-        flex-direction: column
-        justify-content: space-evenly
-        align-items: center
-        width: 100%
-        height: 0%        
-
-    .header_nav.open
-        display: flex
-        flex-direction: column
-        justify-content: space-evenly
-        align-items: center
-        width: 90%
-        height: 100%
-        min-height: 350px
-
     .header_menu_mobile
-        position: relative
+        position: absolute
+        right: 5%
         display: flex
         flex-direction: column
         align-items: center
@@ -133,13 +114,32 @@
     .header_menu_mobile
         span:nth-child(4).open
             transform: scale(0)
+    
+    .header_nav
+        position: absolute
+        top: 100%
+        display: none
+        flex-direction: column
+        justify-content: space-evenly
+        align-items: center
+        width: 100%
+        height: 0%        
+
+    .header_nav.open
+        display: flex
+        flex-direction: column
+        justify-content: space-evenly
+        align-items: center
+        width: 90%
+        height: 100%
+        min-height: 250px
        
     .nav_list
         position: absolute
         display: flex
         flex-direction: column
         align-items: center
-        justify-content: space-around
+        justify-content: space-evenly
         width: 100%
         height: 100%
         border-radius: 0 0 20px 20px
@@ -159,6 +159,7 @@
     .nav_list
         a
             text-decoration: none
+            color: $dark_blue
 
     .nav_list
         li::after
@@ -175,23 +176,22 @@
         li:hover::after
             transform: scaleX(1)
 
-    .header_btn--contact
-        position: absolute
-        right: 2%
-        display: flex
-        justify-content: center
-        align-items: center
-        width: 25%
-        height: 40%
-        border: 1px solid $main_pink
-        border-radius: 100px
-        background: transparent
-        font-size: 2.5vw
-        color: $main_pink
-        cursor: pointer
-        text-decoration: none
-        transition: background 0.5s ease
-        z-index: -1
+    ul
+        .header_btn--contact
+            display: flex
+            justify-content: center
+            align-items: center
+            width: 50%
+            max-width: 200px
+            height: 20%
+            border: 1px solid $main_pink
+            border-radius: 100px
+            background: transparent
+            font-size: 2.5vw
+            color: $main_pink
+            cursor: pointer
+            text-decoration: none
+            transition: background 0.5s ease
 
     .header_btn--contact:hover
         background: $main_pink
@@ -215,8 +215,8 @@
             flex-direction: row
             align-items: center
             justify-content: space-evenly
-            width: 30%
-            min-width: 70px
+            width: 25%
+            min-width: 100px
             height: 100%
             min-height: 70px
             padding-left: 2%
@@ -226,8 +226,12 @@
             display: flex
             justify-content: center
             align-items: center
-            width: 35%
+            width: 100%
+            min-width: 100px
+            max-width: 120px
             height: 100%
+            min-height: 100px
+            max-height: 120px
             cursor: pointer
             
     .header_logo
@@ -251,9 +255,9 @@
         right: 5%
         display: flex
         flex-direction: row
-        justify-content: space-around
+        justify-content: space-evenly
         align-items: center
-        width: 70%
+        width: 30%
         height: 90%
 
     .header_menu_mobile
@@ -264,28 +268,27 @@
         flex-direction: row
         align-items: center
         justify-content: space-evenly
-        width: 70%
-        height: 90%
+        gap: 2%
+        width: 100%
+        height: 100%
 
     .nav_list
         li
+            display: flex
+            flex-direction: column
+            justify-content: center
+            align-items: center
+            width: 30%
+            height: 50%
             list-style: none
-            color: $dark_blue
-            font-size: 1.6vw
-            font-weight: bold
             cursor: pointer
-            width: auto
             font-family: $main_font
-
-    .nav_list
-        a
-            text-decoration: none
 
     .nav_list
         li::after
             display: block
             content: ''
-            width: 100%
+            width: 90%
             height: 2px
             border-radius: 1px
             background: $main_pink
@@ -296,23 +299,30 @@
         li:hover::after
             transform: scaleX(1)
 
-    .header_btn--contact
-        position: absolute
-        right: 2%
-        display: flex
-        justify-content: center
-        align-items: center
-        width: 9%
-        height: 30%
-        margin-right: 2%
-        border: 1px solid $main_pink
-        border-radius: 100px
-        background: transparent
-        font-size: 1.3vw
-        color: $main_pink
-        cursor: pointer
-        text-decoration: none
-        transition: background 0.5s ease
+    
+    .nav_list
+        a
+            width: 100%
+            text-decoration: none
+            font-size: 1.6vw
+            font-weight: bold
+            color: $dark_blue
+
+    ul
+        .header_btn--contact
+            display: flex
+            justify-content: center
+            align-items: center
+            width: 40%
+            height: 40%
+            border: 1px solid $main_pink
+            border-radius: 100px
+            background: transparent
+            font-size: 1.3vw
+            color: $main_pink
+            cursor: pointer
+            text-decoration: none
+            transition: background 0.5s ease
 
     .header_btn--contact:hover
         background: $main_pink
