updated link in header for subscribe page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@ const text = encodeURI('Hola, quisiera más información')
     </div>
     <nav class="header_nav">
         <ul class="nav_list">
-            <li><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=2bBm42XULkqVWzgjUMAzgDX3ViaBFDtPq2Qf1INGG2BUME83RTlUTlpOQTg2RTMyOUNISVRETVVQMC4u" target="_blank">Haz parte</a></li>
+            <li><a href="subscribe" target="_blank">Haz parte</a></li>
             <a class="header_btn--contact" href=`http://wa.me/573103468979?text=${text}` target="_blank">Contacto</a>
         </ul>
     </nav>
